k8s/test-iiif/fester-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: "fester-deployment"
  namespace: "test-iiif"
spec:
  selector:
    matchLabels:
      app: "fester"
  replicas: 1
  template:
    metadata:
      labels:
        app: "fester"
    spec:
      imagePullSecrets:
      - name: "services-dockerhub-creds"
      containers:
      - name: "cantaloupe"
        image: "uclalibrary/fester:latest"
        imagePullPolicy: "Always"
        ports:
        - containerPort: 8183
