k8s/test-iiif/cantaloupe-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: "cantaloupe-service"
  namespace: "test-iiif"
spec:
  ports:
    - port: 8182
      targetPort: 8182
      protocol: TCP
  type: NodePort
  selector:
    app: "cantaloupe"
