k8s/test-iiif/fester-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: "fester-service"
  namespace: "test-iiif"
spec:
  ports:
    - port: 8183
      targetPort: 8183
      protocol: TCP
  type: NodePort
  selector:
    app: "fester"
