k8s/test-iiif/cantaloupe-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: "cantaloupe-ingress"
  namespace: "test-iiif"
  annotations:
    kubernetes.io/ingress.class: alb
    alb.ingress.kubernetes.io/scheme: internet-facing
  labels:
    app: cantaloupe-ingress
spec:
  rules:
    - http:
        paths:
          - path: /*
            backend:
              serviceName: "cantaloupe-service"
              servicePort: 8182
