k8s/test-iiif/test-iiif-ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: "test-iiif-ingress"
  namespace: "test-iiif"
  annotations:
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/enable-cors: "true"
    nginx.ingress.kubernetes.io/ssl-passthrough: "false"
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
spec:
  tls:
    - hosts:
      - test-iiif.library.ucla.edu
      secretName: test-iiif-tls
  rules:
  - host: test-iiif.library.ucla.edu
    http:
      paths:
        - path: /fester[\/]?.*
          backend:
            serviceName: fester-service
            servicePort: 8183
        - path: /collections[\/]?.*
          backend:
            serviceName: fester-service
            servicePort: 8183
        - path: /status/fester
          backend:
            serviceName: fester-service
            servicePort: 8183
        - path: /.*/manifest
          backend:
            serviceName: fester-service
            servicePort: 8183
        - path:
          backend:
            serviceName: cantaloupe-service
            servicePort: 8182
